# LuantiBot

./: Cargo.toml  LICENSE  README.md
libs/mt_auth/: Cargo.toml
libs/mt_net/: Cargo.toml
libs/mt_net/src/: to_srv.rs
libs/mt_rudp/src/: config.rs  lib.rs  worker.rs
src/: bot.rs  bot_script.lua  config.rs  error.rs  event.rs  lib.rs  lua_api.rs  lua_bot.rs  main.rs  net.rs  physics.rs  simple_bot.rs  state.rs
src/mt/: cmd.go  cmds.go  deserialize.fmt  go.mod  hudfield_string.go  hudstyleflags_string.go  itemdef.go  mapblk.go  mt.go  nodedef.go  param2type_string.go  pktinfos  pktinfos.go  proto.go  serialize.fmt  serialize.go  tocltcmds.go  tosrvcmds  tosrvcmds.go  tosrvcmds_cmdno.go  zerialize.go
src/mt/cmd/proxy/: proxy.go
src/mt/internal/mkserialize/: mkserialize.go
src/mt/rudp/cmd/proxy/: proxy.go
src/state/: physics.rs
